--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "a.bersihand@hotmail.fr"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
     "require": {}
 }
